// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render align styles when passed the align baseline prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row align 
  baseline
</div>
`;

exports[`Row should render align styles when passed the align center prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row align 
  center
</div>
`;

exports[`Row should render align styles when passed the align flex-end prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row align 
  flex-end
</div>
`;

exports[`Row should render align styles when passed the align flex-start prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row align 
  flex-start
</div>
`;

exports[`Row should render align styles when passed the align prop as object 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="grid-0 grid-1"
>
  Row align
</div>
`;

exports[`Row should render align styles when passed the align stretch prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row align 
  stretch
</div>
`;

exports[`Row should render justify styles when passed the align prop as object 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
  class="grid-0 grid-1"
>
  Row justify
</div>
`;

exports[`Row should render justify styles when when passed the justify center prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row justify 
  center
</div>
`;

exports[`Row should render justify styles when when passed the justify flex-end prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row justify 
  flex-end
</div>
`;

exports[`Row should render justify styles when when passed the justify flex-start prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row justify 
  flex-start
</div>
`;

exports[`Row should render justify styles when when passed the justify space-around prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row justify 
  space-around
</div>
`;

exports[`Row should render justify styles when when passed the justify space-between prop as string 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row justify 
  space-between
</div>
`;

exports[`Row should render reverse styles with breakpoint lg 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:64em) {
  .grid-0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  class="grid-0 grid-1"
>
  Row reverse 
  lg
</div>
`;

exports[`Row should render reverse styles with breakpoint md 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:64em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  class="grid-0 grid-1"
>
  Row reverse 
  md
</div>
`;

exports[`Row should render reverse styles with breakpoint sm 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:64em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  class="grid-0 grid-1"
>
  Row reverse 
  sm
</div>
`;

exports[`Row should render reverse styles with breakpoint xl 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:64em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

<div
  class="grid-0 grid-1"
>
  Row reverse 
  xl
</div>
`;

exports[`Row should render reverse styles with breakpoint xs 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:64em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  class="grid-0 grid-1"
>
  Row reverse 
  xs
</div>
`;

exports[`Row should render with default styles 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row
</div>
`;

exports[`Row should render with noGutters styles when passed the noGutters prop 1`] = `
.grid-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-2 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-2 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-2 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-2 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-2 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

.grid-2 .grid-1 {
  padding-left: 0;
  padding-right: 0;
}

.grid-0 {
  position: relative;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

<div
  class="grid-2 grid-3"
>
  <div
    class="grid-0 grid-1"
  >
    Col
  </div>
</div>
`;

exports[`Row should render with reverse styles when passed the reverse prop 1`] = `
.grid-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
>
  Row reverse
</div>
`;
